<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calculator</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_point">.</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_multiply">*</string>
    <string name="button_divide">/</string>
    <string name="_0">0</string>
    <string name="btn_terms_conditions"><![CDATA[![CDATA[Terms & Conditions]]]]></string>
    <string name="theme_one">One</string>
    <string name="theme_two">Two</string>
    <string name="theme_three">Three</string>
    <string name="theme_four">Four</string>
    <string name="btn_settings">settings</string>
</resources>